public/css/app.less
@new-design-icon-height: 200px;
@new-design-icon-width: 250px;

.container {
  width: 1024px;
  max-width: none !important;
}

body#body,
.navbar-fixed-top,
.navbar-fixed-bottom {
  min-width: 1024px;
}


.container .navbar-header,
.container .navbar-collapse {
  margin-right: 0;
  margin-left: 0;
}

/* Always float the navbar header */
.navbar-header {
  float: left;
}

/* Undo the collapsing navbar */
.navbar-collapse {
  display: block !important;
  height: auto !important;
  padding-bottom: 0;
  overflow: visible !important;
  visibility: visible !important;
}

.navbar-toggle {
  display: none;
}
.navbar-collapse {
  border-top: 0;
}

/* Always apply the floated nav */
.navbar-nav {
  float: left;
  margin: 0 15px 0 0;
}
.navbar-nav > li {
  float: left;
}
.navbar-nav > li > a {
  padding: 15px;
}

/* Redeclare since we override the float above */
.navbar-nav.navbar-right {
  float: right;
}
foreignobject body {
  overflow: hidden
}
svg .btn.icon-btn {
  font-family: FontAwesome;
  font-size: 1.33333333em;
  line-height: 0.75em;
  vertical-align: -15%;
}
#widthFactorDiv .tooltip-inner {
white-space: pre;
max-width: 300px;
}
#widthFactorDiv .tooltip.top {
margin-top: -72px;
}
#toolbar {
  width: 10%;
  height: 10%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 10;
  padding: 5px;
}
#assembleSvg{
  position: relative;
  margin-bottom: 15px;
}
#traceSvg {
  position: relative;
  margin-bottom: 22px;
}
#shapeEditSvg svg {
  display: block;
  margin: auto;
  margin-bottom: 15px;
}
.svg-toolbar {
  position: absolute;
  bottom: 20px;
}
.svg-instruction-bar {
  position: absolute;
  top: 10px;
  background: rgba(255,255,255,0.6);
}
.svg-instruction-bar .h4 {
  position: absolute;
  top: -2px;
  left: 20px;
}
.svg-instruction-bar .btn.pull-right {
  margin-right: 8px;
}

#traceSvgToolbar {
  left: 310px;
}
.shadedOverlay {
  position: absolute;
  width: 100%;
  height: 50%;
  right: 0px;
  left: 0px;
  bottom: 0px;
  top: 50%;
  transform: translateY(-50%);
  background-color: rgba(0,0,0,0.2);
  text-align: center;
}
.innerOverlay {
  top: 50%;
  position: absolute;
  transform: translateY(-50%);
  margin: 0 auto;
  width: 100%;
}
.input-small {
  display: inline-block;
  width: 40px;
}
.checkbox {
  padding-right: 10px;
}
.betaFeature.betaHidden {
  display: none;
}
svg {
  border: solid 1px #dddddd;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.palette-background, .strip-table {
  fill:  #d7e6f4;
  background:  #d7e6f4;
}
g.translucent path.interior,
g.translucent line.edge {
  fill-opacity: 0.8;
  stroke-opacity: 0.8;
}
rect.palette-button {
  border: solid 1px #dddddd;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
path.interior {
  transition: fill 0.5s ease;
  -moz-transition: fill 0.5s ease;
  -o-transition: fill 0.5s ease;
  -webkit-transition: fill 0.5s ease;
  fill: white;
}
.display:not(.bg) path.interior.infer {
  fill: #fffbd4;
}
path.interior.interior.infer.hover {
  fill: #ffeb3b;
}
.display:not(.bg) path.interior.infer.selected {
  fill: #ffeb3b;
}
path.interior.hover {
  fill: #c5ecfe;
}
.display:not(.bg) path.interior.selected {
  fill: #c5ecfe;
}
path.pattern {
  transition: stroke 0.5s ease, stroke-width 0.5s ease;
  -moz-transition: stroke 0.5s ease, stroke-width 0.5s ease;
  -o-transition: stroke 0.5s ease, stroke-width 0.5s ease;
  -webkit-transition: stroke 0.5s ease, stroke-width 0.5s ease;
  fill: none;
  stroke: gainsboro;
  stroke-width: 3;
}
.bg path.pattern {
  stroke-width: 3;
}
path.pattern.traced {
  stroke: silver;
  stroke-width: 4;
}
path.patternHelperLine {
  stroke: pink;
  stroke-width: 6;
  stroke-opacity: 50%;
  fill: none;
}
path.strip-outline {
  transition: stroke 0.3s ease;
  -moz-transition: stroke 0.3s ease;
  -o-transition: stroke 0.3s ease;
  -webkit-transition: stroke 0.3s ease;
  stroke-width: 8;
  fill: none;
  stroke: black;
}
path.strip {
  transition: stroke 0.3s ease;
  -moz-transition: stroke 0.3s ease;
  -o-transition: stroke 0.3s ease;
  -webkit-transition: stroke 0.3s ease;
  stroke-width: 6;
  fill: none;
}
path.strip.strip-above {
  stroke: gainsboro;
}
path.strip.strip-below {
  stroke: gainsboro;
}
line.edge {
  transition: stroke 0.5s ease;
  -moz-transition: stroke 0.5s ease;
  -o-transition: stroke 0.5s ease;
  -webkit-transition: stroke 0.5s ease;
  stroke: #999999;
  stroke-width: 5;
}
line.edge.hover {
  stroke: #03a9f4;
}
.display:not(.bg) line.edge.selected {
  stroke: #2196f3;
}
.display:not(.bg) line.edge.joined {
  stroke: #239207;
}
.display:not(.bg) line.edge.joined.hover {
  stroke: #f44336;
}
.bg line.edge {
  stroke: gainsboro;
}
.bg.optimize-bg line.edge {
  stroke: none;
}
line.edgehandle {
  stroke: #f44336;
  stroke-opacity: 0;
  stroke-width: 20;
}
circle.vertex {
  transition: fill 0.5s ease;
  -moz-transition: fill 0.5s ease;
  -o-transition: fill 0.5s ease;
  -webkit-transition: fill 0.5s ease;
  fill: #808080;
}
circle.vertex.actionable:hover {
  fill: #03a9f4;
  cursor: all-scroll;
}
.bg circle.vertex {
  fill: none;
}
circle.crop-vertex {
  fill: #1b1b1b;
}
circle.crop-vertex:hover {
  fill: #03a9f4;
}
circle.crop-vertex.selected {
  fill: green;
}
circle.crop-vertex.selected:hover {
  fill: #03a9f4;
}
path.cropOverlayPath {
  fill: grey;
  opacity: 0.5;
  stroke: green;
  stroke-width: 5;
  stroke-linejoin: round;
}
circle.patternHandle {
  transition: fill 0.5s ease;
  -moz-transition: fill 0.5s ease;
  -o-transition: fill 0.5s ease;
  -webkit-transition: fill 0.5s ease;
  fill: pink;
}
circle.patternHandle:hover,
g.active.patternHelper circle.patternHandle {
  fill: red;
}
g.active.patternHelper path.patternHelperLine {
  stroke: red;
}
.display:not(.bg) line.edge.selectedGroup,
.display:not(.bg) path.pattern.selectedGroup {
  stroke: #2ebcfc;
}
circle.vertex.selectedGroup {
  fill: #2ebcfc;
}
.btn.btn-default.disabled {
  background-color: gainsboro;
}
/* ... */

